# gyro_cal_rig

./: README.md  plotjuggler-layout.xml
arduino_driver/: arduino_driver.ino
coil_rig_arduino/: coil_rig_arduino.ino
gyro_cal_gui/: CMakeLists.txt  package.xml
gyro_cal_gui/src/: main.cpp  rig_gui.ui
gyro_cal_rig/: CMakeLists.txt  package.xml
gyro_cal_rig/config/: cal_node_config.yaml
gyro_cal_rig/launch/: gyro_calibration.launch.py  gyro_calibration2.launch.py  gyro_procedure.launch.py  gyro_validation.launch.py  rig_recording.launch.py
gyro_cal_rig/src/: data_logger.py  gyro_calibration2_node.py  gyro_calibration_node.py  gyro_rig_node.cpp  gyro_validation_node.py  procedure_node.py  rig_recording_node.py
gyro_cal_rig_msgs/: CMakeLists.txt  package.xml
gyro_cal_rig_msgs/action/: CalibrateGyro.action
gyro_cal_rig_msgs/msg/: GyroRigStatus.msg
matlab/: analyze.asv  analyze.m  analyzeCalibration.m  analyzeCalibration2Files.m  analyzeCalibrationFiles.asv  analyzeCalibrationFiles.m  analyzeRecordingFiles.m  analyzeValidationFiles.m  cal2fit.sfit  fitcalibration2data.m  fitcalibrationdata.m
